--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint": "eslint src/",
     "preversion": "npm run lint",
     "version": "npm run build && npm run build_packed && git add -A",
-    "freeze": "node node_modules/@maplat/core/bin/freezer.js -s parts -f src/freeze_images.js -u src/pointer_images.js && node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i"
+    "freeze": "node node_modules/@maplat/core/bin/freezer.js -s parts -f src/freeze_images.js -u src/pointer_images.js && node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i",
+    "preinstall": "npx npm-force-resolutions || true"
   },
   "repository": {
     "type": "git",
@@ -44,8 +45,8 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "^0.6.6",
-    "@maplat/tin": "^0.6.3",
+    "@maplat/core": "^0.6.7",
+    "@maplat/tin": "^0.6.5",
     "@turf/turf": "^5.1.6",
     "ol": "^6.1.1",
     "ol5": "file:packages/ol5",
@@ -75,5 +76,11 @@
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "workbox-build": "^4.3.1"
+  },
+  "resolutions": {
+    "clean-css": "^4.2.3",
+    "minimist": "^1.2.5",
+    "yargs-parser": "^18.1.3",
+    "utils-extend": "^1.0.8"
   }
 }
